--- a/CoolTool/CoolTool/Supporting Files/en.lproj/MainStoryboard_iPad.storyboard
+++ b/CoolTool/CoolTool/Supporting Files/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="SUViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4Pn-nG-uAC"/>
+                        <viewControllerLayoutGuide type="bottom" id="LrB-WT-PzV"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="5">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="iOS123.png" translatesAutoresizingMaskIntoConstraints="NO" id="3cM-UL-7wf"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="imageeee.png" translatesAutoresizingMaskIntoConstraints="NO" id="3cM-UL-7wf">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="3cM-UL-7wf" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="0RT-Vg-cSw"/>
-                            <constraint firstItem="3cM-UL-7wf" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="Xx4-zC-Ape"/>
-                            <constraint firstItem="3cM-UL-7wf" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="qPC-eN-HoW"/>
-                            <constraint firstItem="3cM-UL-7wf" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="r8c-Bf-2M5"/>
+                            <constraint firstItem="3cM-UL-7wf" firstAttribute="top" secondItem="5" secondAttribute="top" id="0RT-Vg-cSw"/>
+                            <constraint firstItem="3cM-UL-7wf" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" id="Xx4-zC-Ape"/>
+                            <constraint firstItem="3cM-UL-7wf" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" id="qPC-eN-HoW"/>
+                            <constraint firstItem="3cM-UL-7wf" firstAttribute="leading" secondItem="5" secondAttribute="leading" id="r8c-Bf-2M5"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -28,18 +35,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="iOS123.png" width="640" height="1136"/>
+        <image name="imageeee.png" width="640" height="1136"/>
     </resources>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="SUViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SUViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
+        <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
