--- a/CoolTool/CoolTool/Supporting Files/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CoolTool/CoolTool/Supporting Files/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="SUViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uhx-Jg-6HB"/>
+                        <viewControllerLayoutGuide type="bottom" id="aG7-f6-KhI"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="iOS123.png" translatesAutoresizingMaskIntoConstraints="NO" id="kFn-dj-9y4"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" image="imageeee.png" translatesAutoresizingMaskIntoConstraints="NO" id="kFn-dj-9y4">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="kFn-dj-9y4" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="ItG-2d-IXF"/>
-                            <constraint firstItem="kFn-dj-9y4" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="LiF-YS-OgJ"/>
-                            <constraint firstItem="kFn-dj-9y4" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="UZQ-2O-sng"/>
-                            <constraint firstItem="kFn-dj-9y4" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="qoS-AW-vh7"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -28,7 +30,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="iOS123.png" width="640" height="1136"/>
+        <image name="imageeee.png" width="640" height="1136"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
