--- a/CoolTool/CoolTool/Supporting Files/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CoolTool/CoolTool/Supporting Files/en.lproj/MainStoryboard_iPhone.storyboard
@@ -24,6 +24,9 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="testImageView" destination="kFn-dj-9y4" id="sHL-nM-Kg1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
